syntax="proto3";

option java_multiple_files=true;
option java_package="com.mysql_crud.grpc";
option java_outer_classname="CrudServiceProto";

package com.mysql_crud.grpc;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "google/protobuf/type.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

service EmployeesService {
  rpc CreateEmployee(CreateEmployeeRequest) returns (CreateEmployeeResponse){};
  rpc GetEmployee(GetEmployeeRequest) returns (GetEmployeeResponse){};
  rpc ListEmployees(ListEmployeesRequest) returns (ListEmployeesResponse){};
  rpc UpdateEmployee(UpdateEmployeeRequest) returns (UpdateEmployeeResponse){};
  rpc DeleteEmployee(DeleteEmployeeRequest) returns (google.protobuf.Empty){};
}

message CreateEmployeeRequest {
  Employee employee=1;
}
message CreateEmployeeResponse {
  Employee employee=1;
}
message GetEmployeeRequest {
  string id=2;
}
message GetEmployeeResponse {
  Employee employee=1;
}
message ListEmployeesRequest {
  int32 pageNumber=1;
  int32 pageSize=2;
}
message ListEmployeesResponse {
  repeated Employee employees=1;
}
message UpdateEmployeeRequest {
  Employee employee=1;
}
message UpdateEmployeeResponse {
  Employee employee=1;
}
message DeleteEmployeeRequest {
  string id=1;
}



